--- a/game/src/index.css
+++ b/game/src/index.css
@@ -6,6 +6,6 @@
   html {
     font-family: DM Sans, Inter, sans-serif;
     background-color: #000000;
-    color: #fff;
+    color: #f3f3f3;
   }
 }
