--- a/game/src/index.css
+++ b/game/src/index.css
@@ -9,3 +9,35 @@
     color: #f3f3f3;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  border-radius: 20px;
+  width: 10px;
+  background-color: rgb(255 255 255 / 10%);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: rgb(255 255 255 / 10%);
+  border-radius: 20px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.44, rgb(122, 153, 217)),
+    color-stop(0.72, rgb(73, 125, 189)),
+    color-stop(0.86, rgb(28, 58, 148))
+  );
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ff0303;
+}
